# raycast-script-commands

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Makefile  PR_DESCRIPTION.md  README.md  get-todos.py  jira-ticket-info.py  llm-query.py  main.py  polish-clipboard-text-ollama.py  polish-clipboard-text.py  pyproject.toml  save-clipboard-to-audio.py  speak-clipboard.py  speak_clipboard_sesame.py
.claude/: settings.local.json
commands/text-processing/: README.md  polish-clipboard-text.py
scripts/: get-todos.py  jira-ticket-info.py  polish-clipboard-text-ollama.py  polish-clipboard-text.py  save-clipboard-to-audio.py  speak-clipboard.py
src/raycast_scripts/: __init__.py  config.py  get_todos.py  jira_ticket_info.py  logging.py  polish_clipboard_text.py  polish_clipboard_text_ollama.py  save_clipboard_to_audio.py  speak_clipboard.py  utils.py
tests/: __init__.py  test_get_todos.py  test_utils.py
