[project]
name = "raycast-script-commands"
version = "0.1.0"
description = "Python-based Raycast script commands for productivity and automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jira>=3.10.5",
    "ollama>=0.5.3",
    "openai>=1.102.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.10",
]
